# tetsuo-gpu-miner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: sha256.cuh  sha256_optimized.cuh  sha256_variants.cuh
include/tetsuo/: config.hpp  cuda_utils.cuh  mining.hpp  rpc.hpp  utils.hpp
src/: main.cu  mining.cpp  rpc.cpp  utils.cpp
tests/: README.md  benchmark.cu  benchmark_all.cu  test_sha256.cu
